@@ -1,3 +1,8 @@
+2002-05-13  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/gnome/integration.jl: admit defeat and go back to
+	loading xterm module all the time
+
 2002-05-11  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/gnome/integration.jl (gnome-use-capplet-changed):
